ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-canary
  labels:
    app: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  rules:
  - host: app.kubernetes.example
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc2
              port:
                number: 80
